tests/sksl/errors/UniformVarWithInitializerExpression.dsl.glsl
### Compilation failed:

error: 'uniform' variables cannot use initializer expressions

1 error
